<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_color_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/clear_cache_confirm"
        android:textColor="@color/text_color_light_black"
        android:textSize="@dimen/text_size_26" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/divider_color_horizontal" />

    <TextView
        android:id="@+id/clear_cache_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/confrim"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_34" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/bg_color_gray" />

    <TextView
        android:id="@+id/clear_cache_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_34" />
</LinearLayout>