<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_heise"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color_appbar_layout_black"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <ImageView
                android:id="@+id/set_pwd_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_12"
                android:layout_marginTop="32dp"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:src="@mipmap/ic_land_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_12"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical"
                android:text="设置新密码"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_34" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:paddingBottom="5dp"
            android:src="@mipmap/mima_denglu" />

        <EditText
            android:id="@+id/old_pwd_input"
            style="@style/et_password"
            android:layout_width="304dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:hint="@string/old_pass"
            android:paddingLeft="40dp"
            android:textColorHint="@color/text_color_light_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/update_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/forgot_pass_hint"
            android:textColor="@color/text_color_little_orange"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:paddingBottom="5dp"
            android:src="@mipmap/mima_denglu" />

        <EditText
            android:id="@+id/update_new_pwd"
            style="@style/et_password"
            android:layout_width="304dp"
            android:layout_height="45dp"
            android:hint="@string/new_pass"
            android:paddingLeft="40dp"
            android:textColorHint="@color/text_color_light_black"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:paddingBottom="5dp"
            android:src="@mipmap/mima_denglu" />

        <EditText
            android:id="@+id/update_re_new_pwd"
            style="@style/et_password"
            android:layout_width="304dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:hint="@string/renew_pass"
            android:paddingLeft="40dp"
            android:textColorHint="@color/text_color_light_black"
            android:textSize="18sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/update_pwd_submit"
        android:layout_width="304dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/bottom_select"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/text_color_white"
        android:textSize="20sp" />


</LinearLayout>