<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_heise"
    android:gravity="center_horizontal">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color_appbar_layout_black">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <ImageView
                android:id="@+id/user_feedback_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="@dimen/dp_12"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:src="@mipmap/ic_land_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="@dimen/dp_12"
                android:gravity="center_vertical"
                android:text="@string/user_feedback"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_34" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:gravity="center_vertical"
                android:text="@string/advice_tip"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_28" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:background="#04ffffff">

                <ImageView
                    android:id="@+id/text_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:paddingTop="20dp"
                    android:paddingRight="@dimen/dp_15"
                    android:src="@mipmap/com_back"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/feedback_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/text_enter"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/input_feedback_hint"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingTop="@dimen/px_21"
                    android:paddingRight="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_15"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_color_light_black"
                    android:textSize="@dimen/dp_15" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_15"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/upload_shot"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30" />


            <shangri.example.com.shangri.ui.view.NoScrollGridView
                android:id="@+id/feedback_grid"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:horizontalSpacing="@dimen/dp_23"
                android:numColumns="4"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15" />
            <!--<FixedGridLayout
                android:id="@+id/feedback_grid"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:background="@color/bg_color_white"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                />
    -->


            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="top"
                android:paddingLeft="@dimen/dp_15"
                android:paddingTop="@dimen/dp_19"
                android:text="@string/contact_tel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_28" />


            <EditText
                android:id="@+id/feedback_contact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#04ffffff"
                android:gravity="center_vertical"
                android:hint="@string/contact_tel_hint"
                android:paddingLeft="@dimen/dp_15"
                android:textColor="@color/white"
                android:textColorHint="@color/text_color_light_black"
                android:textSize="@dimen/text_size_30" />

            <TextView
                android:id="@+id/feedback_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bottom_select"
                android:gravity="center"
                android:text="提交"
                android:textColor="@color/white"
                android:textSize="20dp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>