<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_denglu"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:src="@mipmap/logon_icon" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <ImageView
                android:id="@+id/user_login_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_12"
                android:layout_marginTop="32dp"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:src="@mipmap/ic_land_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_12"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical"
                android:text="@string/user_login_title"
                android:textSize="@dimen/text_size_34" />
        </RelativeLayout>


    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:paddingBottom="5dp"
            android:src="@mipmap/icon_p" />

        <EditText
            android:id="@+id/user_login_tel"
            style="@style/et_phone_style"
            android:layout_width="304dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="请输入手机号"
            android:paddingLeft="25dp" />

        <ImageView
            android:id="@+id/user_login_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@mipmap/ic_land_close" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:paddingBottom="5dp"
            android:src="@mipmap/btn_m" />

        <EditText
            android:id="@+id/user_login_pass"
            style="@style/et_password"
            android:layout_width="304dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:hint="请输入密码"
            android:paddingLeft="25dp" />

        <ImageView
            android:id="@+id/user_login_pass_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:src="@mipmap/ic_land_eye2"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/user_login_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/user_login_remember_password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_land_remember" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="记住密码"
                android:textColor="@color/text_color_login_white"
                android:textSize="13dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/user_login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:text="忘记密码?"
            android:textColor="@color/text_color_login_white"
            android:textSize="13dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/user_login"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/bottom_select"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/user_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:text="@string/register"
            android:textColor="@color/text_color_light_orange"
            android:textSize="@dimen/text_size_26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/user_login_register"
            android:padding="5dp"
            android:text="@string/register_hint"
            android:textColor="@color/text_color_login_white"
            android:textSize="@dimen/text_size_26" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_43"
        android:drawableLeft="@mipmap/xian"
        android:drawablePadding="@dimen/dp_17"
        android:drawableRight="@mipmap/xian"
        android:text="@string/register_other_login"
        android:textColor="@color/text_color_login_white"
        android:textSize="@dimen/text_size_26" />

    <ImageView
        android:id="@+id/iv_wechat_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@mipmap/weixin_fangshi" />
</LinearLayout>